# skystore

./: send.py  shaopu-2.pem  skystore.py  skystore_cli.py
s3-proxy/: Cargo.toml  justfile  test_output.txt
s3-proxy/src/: skyproxy.rs  skyproxy_test.rs
s3-proxy/src/client_impls/: azure.rs  s3.rs
s3-proxy/src/utils/: stream_utils.rs
s3-proxy/test/: register_config2.json  register_config5.json  test1_config.json
store-server/: app.py
store-server/experiment/: client.py  host.py
store-server/operations/: object_operations.py
store-server/operations/policy/: placement_policy.py
store-server/operations/schemas/: object_schemas.py
store-server/operations/utils/: db.py
