[package]
name = "sky-s3"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4"
async-trait = "0.1.68"
aws-config = "0.55.3"
aws-credential-types = "0.55.3"
aws-sdk-s3 = "0.28.0"
http = "0.2.9"
hyper = { version = "0.14.26", features = ["full"] }
reqwest = "0.11.17"
s3s = { git = "https://github.com/shaopu1225/s3s.git", rev = "d2c22292f240ee2b766806cb12d96cee4d780b2e" }
s3s-aws = { git = "https://github.com/shaopu1225/s3s.git", rev = "d2c22292f240ee2b766806cb12d96cee4d780b2e" }
serde = "1.0.160"
serde_json = "1.0.96"
syn = "2.0.15"
tokio = { version = "1.28.0", features = ["full"] }
tower = { version = "0.4.13", features = ["make"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
skystore-rust-client = { path = "../generated/skystore-rust-client" }
chrono = { version = "0.4", features = ["serde"] }
time = "0.3.21"
serial_test = "2.0.0"
tokio-stream = "0.1.14"
tokio-util = "0.7.8"
itoa = "^1.0.9"
bytes = "1.4.0"
flo_stream = "0.7.0"
azure_storage_blobs = { git = "https://github.com/Azure/azure-sdk-for-rust.git", rev = "4849d7937edb8a95bbdfb85e1837c7606c83f57b" }
azure_storage =  { git = "https://github.com/Azure/azure-sdk-for-rust.git", rev = "4849d7937edb8a95bbdfb85e1837c7606c83f57b" }
azure_core =  { git = "https://github.com/Azure/azure-sdk-for-rust.git", rev = "4849d7937edb8a95bbdfb85e1837c7606c83f57b" }
futures = "0.3.28"
uuid = "1.3.3"
hex = "0.4.3"
google-cloud-storage = "0.11.0"
google-cloud-default = { version = "0.2.0", features = ["storage"] }
futures-lite = "1.13.0"
percent-encoding = "2.1.0"
rand_core = "0.6.3"
k256 = {version = "0.13.1", features = ["serde"]}
ctr = "0.9.2"
aes = "0.8.3"
rand = "0.8.5"
pbkdf2 = "0.12.2"
sha2 = "0.10.8"
bincode = "1.0"
